fix: lists spacing and alignment

--- a/packages/editor/core-document-editor/src/styles/table.css
+++ b/packages/editor/core-document-editor/src/styles/table.css
@@ -43,22 +43,13 @@
 }
 
 .table-wrapper table th {
-  font-weight: 600;
+  font-weight: 500;
   text-align: left;
-  background-color: rgba(var(--color-primary-100), 0.3);
+  background-color: rgba(var(--color-background-80));
 }
 
 .table-wrapper table .selectedCell {
-  outline: 1px solid rgba(var(--color-primary-100));
-  /* z-index: 2;
-  position: absolute;
-  content: "";
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgba(var(--color-primary-300), 0.1);
-  pointer-events: none; */
+  border-color: rgba(var(--color-primary-100));
 }
 
 /* table dropdown */
