--- a/packages/editor/core/src/styles/editor.css
+++ b/packages/editor/core/src/styles/editor.css
@@ -7,10 +7,17 @@
 }
 
 /* block quotes */
+.ProseMirror blockquote {
+  font-style: normal;
+  font-weight: 400;
+  border-left: 3px solid rgb(var(--color-border-300));
+}
+
 .ProseMirror blockquote p::before,
 .ProseMirror blockquote p::after {
   display: none;
 }
+/* end block quotes */
 
 .ProseMirror code::before,
 .ProseMirror code::after {
@@ -51,21 +58,13 @@
 
 /* Custom TODO list checkboxes – shoutout to this awesome tutorial: https://moderncss.dev/pure-css-custom-checkbox-style/ */
 
-ul[data-type="taskList"] {
-  margin-top: 7px;
-}
-
-ul[data-type="taskList"] ul[data-type="taskList"] {
-  margin-top: 0.6rem;
-}
-
 ul[data-type="taskList"] li {
   font-size: 1rem;
   line-height: 1.5;
 }
 
 ul[data-type="taskList"] li > label {
-  margin: 0.1rem 0.2rem 0 0;
+  margin: 0.1rem 0.15rem 0 0;
   user-select: none;
 }
 
@@ -73,7 +72,7 @@ ul[data-type="taskList"] li > label input[type="checkbox"] {
   border: 1px solid rgba(var(--color-border-300)) !important;
   outline: none;
   border-radius: 2px;
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 ul[data-type="taskList"] li > label input[type="checkbox"]:hover {
@@ -98,6 +97,7 @@ ul[data-type="taskList"] li > label input[type="checkbox"]:checked:hover {
 }
 
 ul[data-type="taskList"] li > label input[type="checkbox"] {
+  position: relative;
   -webkit-appearance: none;
   appearance: none;
   background-color: rgb(var(--color-background-100));
@@ -121,17 +121,20 @@ ul[data-type="taskList"] li > label input[type="checkbox"] {
   /* check sign */
   &::before {
     content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 0.5em;
     height: 0.5em;
     transform: scale(0);
+    transform-origin: center;
     transition: 120ms transform ease-in-out;
     box-shadow: inset 1em 1em;
-    transform-origin: center;
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
   }
 
   &:checked::before {
-    transform: scale(1);
+    transform: scale(1) translate(-50%, -50%);
   }
 }
 
@@ -274,9 +277,21 @@ span:focus .fake-cursor {
   z-index: 1;
 }
 
-ol,
-ul {
-  margin-top: 3px !important;
+/* number, bulleted and to-do lists */
+.prose ol:where(.prose > :first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)),
+.prose
+  ul:not([data-type="taskList"]):where(.prose > :first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)),
+.prose ul[data-type="taskList"]:where(.prose > :first-child) {
+  margin-top: 0.25rem !important;
+}
+
+.prose ol:not(:where(.prose > :first-child):not(:where([class~="not-prose"], [class~="not-prose"] *))),
+.prose
+  ul:not([data-type="taskList"]):not(
+    :where(.prose > :first-child):not(:where([class~="not-prose"], [class~="not-prose"] *))
+  ),
+.prose ul[data-type="taskList"]:not(:where(.prose > :first-child)) {
+  margin-top: calc(0.25rem + 3px) !important;
 }
 
 ol ol,
@@ -285,6 +300,11 @@ ul:not([data-type="taskList"]) ul:not([data-type="taskList"]),
 ul:not([data-type="taskList"]) ol {
   margin-top: 0.45rem !important;
 }
+
+ul[data-type="taskList"] ul[data-type="taskList"] {
+  margin-top: 0.6rem;
+}
+/* end number, bulleted and to-do lists */
 
 /* tailwind typography */
 .prose :where(h1):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
